auth fixed, ui ironed somewhat

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -6,17 +6,14 @@ block content
 
     if error
       p Error getting dynamic content.
-    else
-      p The following files are active:      
+    else           
       br
 
       - let files = fileInfo.slice(0,7);
       - let lastUpload = fileInfo2[fileInfo2.length - 1];
-           
-      - console.log('lock on dash:' + global.uploadLock)
-      - console.log('isLogged on dahs:' + global.isLoggedIn)
-      if global.dashboardLock == true || global.isLoggedIn == false
-        a(href='/login') You must LOGIN!
+                           
+      if global.dashboardLock == true || isAuthenticated == false
+        a(href='/login') You must either wait seven hours or LOGIN!
       else                    
         div
           - let x = 0;   
