--- a/views/index.pug
+++ b/views/index.pug
@@ -50,7 +50,7 @@ block content
         p
           | Short bio goes here. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         p
-          a(href='/pastComposers') See all our past curators &raquo;
+          a(href='/past-composers') See all our past curators &raquo;
     //- content
     section.mainContent
       //- Contact details
