--- a/views/upload-form.pug
+++ b/views/upload-form.pug
@@ -1,20 +1,22 @@
 block content
   h1= title
-  p Welcome to Flame Keeper
-  - console.log(global.uploadLock);
-  - console.log(global.isLoggedIn)
+  p Welcome to Flame Keeper  
+  
   if error
     p Error getting dynamic content.
   else    
-    if global.uploadLock == false && isLoggedIn == true
+    if isAuthenticated
       div(class="solid")
         p UPLOAD YOUR FILE:
         form(method="POST" action="/upload" id="uploadForm" encType="multipart/form-data")                 
           input(type="file" name="theUpload" id="uploadValue" onChange="disableSubmit()" accept="audio/mp3")                                          
           input(type="submit" form="uploadForm" id="uploadButton" value="UPLOAD" onclick="return redirect()")  
           
-    br
-    br
+      br
+      br
+    else
+      a(href="/login")
+        div Log in
 
     script.
       
