sleep restart sort of fixed

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -8,9 +8,10 @@ block content
       p Error getting dynamic content.
     else           
       br
-
+      - console.log(global.uploadLock);
+      - console.log(global.dashboardLock);
       - let files = fileInfo.slice(0,7);
-      - let lastUpload = fileInfo2[fileInfo2.length - 1];
+      - let lastUpload = fileInfo2[fileInfo2.length - 1];      
                            
       if global.dashboardLock == true || isAuthenticated == false
         a(href='/login') You must either wait seven hours or LOGIN!
@@ -45,7 +46,7 @@ block content
           p= lastUpload.Name
           audio(controls loop type="audio/mpeg" src=uploadSrc id="toDelete")       
           br      
-          form(method="POST" action=`/delete/${lastUpload}` id="deleteForm" encType="multipart/form-data")                                        
+          form(method="POST" action=`/delete/${lastUpload.Name}` id="deleteForm" encType="multipart/form-data")                                        
           input(type="submit" form="deleteForm" value="UNDO" onclick="setTimeout(function(){var ww = window.open('/uploadForm', '_blank'); ww.close(); }, 1000);")      
          
         
