--- a/views/history.pug
+++ b/views/history.pug
@@ -7,7 +7,7 @@ block content
         //-- Profile logo. Add a img tag in place of <span>.
         p.logoPlaceholder
           img(src='../images/me-logo-wht.png' alt='sample logo')      
-      .installation
+      #installation
         //- if error
         //-   p Error getting dynamic content.
         //- else                
