--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,8 +11,8 @@ html(lang='en')
     script.
       var __adobewebfontsappname__='dreamweaver'         
     script(src='https://sdk.amazonaws.com/js/aws-sdk-2.685.0.min.js')
-    script(src='https://unpkg.com/wavesurfer.js')
-    script(src='https://unpkg.com/wavesurfer.js/dist/plugin/wavesurfer.regions.min.js')
+    //- script(src='https://unpkg.com/wavesurfer.js')
+    //- script(src='https://unpkg.com/wavesurfer.js/dist/plugin/wavesurfer.regions.min.js')
     
   block content
     
