fixed bg issue and added audio

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -32,6 +32,10 @@
     100%{background-position:0% 97%}
 }
 
+html {
+	background-color: transparent;
+}
+
 body {
 	margin-left: auto;
 	margin-right: auto;
