--- a/views/upload-form.pug
+++ b/views/upload-form.pug
@@ -1,65 +1,72 @@
 block content
-  h1= title
-  p Welcome to Flame Keeper  
-  - console.log(global.uploadLock)
-  
-  if error
-    p Error getting dynamic content.
-  else    
-    if isAuthenticated && global.uploadLock == false
-      div(class="solid")
-        p UPLOAD YOUR FILE:
-        form(method="POST" action="/upload" id="uploadForm" encType="multipart/form-data")                 
-          input(type="file" name="theUpload" id="uploadValue" onChange="disableSubmit()" accept="audio/mp3")                                          
-          input(type="submit" form="uploadForm" id="uploadButton" value="UPLOAD" onclick="return redirect()")  
-          
+  if isAuthenticated
+    nav
+      a(href='/upload-form') Upload Form
       br
-      br
-    else if isAuthenticated && global.uploadLock == true
-      a(href="/dashboard")
-        div Go to the DASHBOARD.
-    else if isAuthenticated == false 
-      a(href="/login")
-        div YOU MUST LOGIN.
-
-    script.
+      a(href='/dashboard') Dashboard
+      br    
+      h1= title
+      p Welcome to Flame Keeper
+      - console.log(global.uploadLock)
       
-                
-      
-
-      document.getElementById("uploadButton").disabled = true;
-      document.getElementById("uploadValue").disabled = false;
-
-
-      function disableSubmit() {
-        let x = document.getElementById('uploadValue');
-        let y = x.value; 
-        let lastFour = y.substr(y.length - 4); // => ".mp3"
-        if (y == null || lastFour != '.mp3') {
-          console.log(lastFour);
-          document.getElementbyId("uploadValue").disabled = true;        
-          document.getElementById("uploadButton").disabled = true;        
-        } else {
-          
-          document.getElementById("uploadButton").disabled = false;
-          console.log(lastFour);
-        }}
-      
-      function redirect() {                 
-        let x = document.getElementById('uploadValue');
-        let y = x.value; 
-        let lastFour = y.substr(y.length - 4); // => ".mp3"                         
-        let fsize = x.files.item(0).size;
+      if error
+        p Error getting dynamic content.
+      else                  
+        if isAuthenticated && global.uploadLock == false
+          div(class="solid")
+            p UPLOAD YOUR FILE (mp3s only):
+            form(method="POST" action="/upload" id="uploadForm" encType="multipart/form-data")                 
+              input(type="file" name="theUpload" id="uploadValue" onChange="disableSubmit()" accept="audio/mp3")                                          
+              input(type="submit" form="uploadForm" id="uploadButton" value="UPLOAD" onclick="return redirect()")  
               
-        if (lastFour == '.mp3' && fsize < 209731438) {
-          setTimeout(function(){ document.getElementById("uploadButton").disabled = true }, 10);
-          setTimeout(function(){ window.open('/dashboard'); }, 10000);
-          elm = document.createElement('p');
-          elm.innerHTML = 'PLEASE WAIT...The file is uploading (this can take up to 10 seconds)...';
-          document.body.appendChild(elm);                        
-        } else {
-          alert('File must be an .mp3! or it is too large!')
-        }          
-      }
+          br
+          br
+        else if isAuthenticated && global.uploadLock == true
+          a(href="/dashboard")
+            div Go to the DASHBOARD.
+        else if isAuthenticated == false 
+          div 
+            p You must either wait seven hours, or go to the #[a(href='/dashboard') DASHBOARD] to finish placing your file.
+
+        script.
+          
+                    
+          
+
+          document.getElementById("uploadButton").disabled = true;
+          document.getElementById("uploadValue").disabled = false;
+
+
+          function disableSubmit() {
+            let x = document.getElementById('uploadValue');
+            let y = x.value; 
+            let lastFour = y.substr(y.length - 4); // => ".mp3"
+            if (y == null || lastFour != '.mp3') {
+              console.log(lastFour);
+              document.getElementbyId("uploadValue").disabled = true;        
+              document.getElementById("uploadButton").disabled = true;        
+            } else {
+              
+              document.getElementById("uploadButton").disabled = false;
+              console.log(lastFour);
+            }}
+          
+          function redirect() {                 
+            let x = document.getElementById('uploadValue');
+            let y = x.value; 
+            let lastFour = y.substr(y.length - 4); // => ".mp3"                         
+            let fsize = x.files.item(0).size;
+                  
+            if (lastFour == '.mp3' && fsize < 209731438) {
+              setTimeout(function(){ document.getElementById("uploadButton").disabled = true }, 10);
+              setTimeout(function(){ window.open('/dashboard'); }, 10000);
+              elm = document.createElement('p');
+              elm.innerHTML = 'PLEASE WAIT...The file is uploading (this can take up to 10 seconds)...';
+              document.body.appendChild(elm);                        
+            } else {
+              alert('File must be an .mp3! or it is too large!')
+            }          
+          }
+  else
+    a(href='/login') YOU MUST LOGIN!
     
-  
