--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -1,55 +1,75 @@
 extends layout
-
 block content
-  body
-  
-
-    if error
-      p Error getting dynamic content.
-    else           
-      br
-      - console.log(global.uploadLock);
-      - console.log(global.dashboardLock);
-      - let files = fileInfo.slice(0,7);
-      - let lastUpload = fileInfo2[fileInfo2.length - 1];      
-                           
-      if global.dashboardLock == true || isAuthenticated == false
-        a(href='/login') You must either wait seven hours or LOGIN!
-      else                    
-        div
-          - let x = 0;   
-          each file in files ? files : ['NO!!!']       
-            - x++        
-            - let audioSrc = `https://fk-audio.s3.amazonaws.com/${file.Name}`                            
-            div(class="solid")
-              form(method="POST" action=`/replace/${file.Name}?_method=PUT` id=`launchForm${x}` encType="multipart/form-data")                                
-                p= file.Name
-                
-                ol(class="listy" id=file.Name)  
-                  div(id="player")          
-                    audio(id=`${x}` loop controls type="audio/mpeg" src=audioSrc class="audioElement")
-                    br
-                    a(href="#" onclick=`document.getElementById(${x}).muted = true;`) MUTE -- 
-                    a(href="#" onclick=`document.getElementById(${x}).muted = false;`) -- UNMUTE
-              br                                
-              input(type="submit" form=`launchForm${x}` value="REPLACE")
-              br
-              br      
-              
-        - let uploadSrc = `https://fk-audio.s3.amazonaws.com/${lastUpload.Name}`
-        br
-        br
-        br
-        
-        div(class="dotted")
-          p LAST FILE YOU UPLOADED:
-          p= lastUpload.Name
-          audio(controls loop type="audio/mpeg" src=uploadSrc id="toDelete")       
-          br      
-          form(method="POST" action=`/delete/${lastUpload.Name}` id="deleteForm" encType="multipart/form-data")                                        
-          input(type="submit" form="deleteForm" value="UNDO" onclick="setTimeout(function(){var ww = window.open('/uploadForm', '_blank'); ww.close(); }, 1000);")      
-         
-        
-        
+  nav
+    a(href='/upload-form') Upload Form
+    br
+    a(href='/dashboard') Dashboard
+    br   
+    body
+      if error
+        p Error getting dynamic content.
+      else           
+        br      
+        - let files = fileInfo.slice(0,7);
+        - let lastUpload = fileInfo2[fileInfo2.length - 1];      
+                            
+        if global.dashboardLock == true || isAuthenticated == false
+          h3 You must either upload a track or wait seven hours!
+        else                    
+          div
             
-        
+            each file in files ? files : ['NO!!!']       
+              
+              - let audioSrc = `https://fk-audio.s3.amazonaws.com/${file.Name}`                            
+              div(class="solid")
+                form(method="POST" action=`/replace/${file.Name}?_method=PUT` id=`launchForm${file.id}` encType="multipart/form-data")                                
+                  p= file.Name
+                  
+                  ol(class="listy" id=file.Name)  
+                    div(id="player")          
+                      audio(id=`audio${file.id}` loop controls type="audio/mpeg" src=audioSrc class="audioElement" autoplay)
+                      br
+                      p(class='mutes' id=`mutebutton${file.id}` href="#" onclick=`changeButton(${file.id})`) TOGGLE TO MUTE
+                      br
+                      //- p ///
+                      //- a(id='mutebutton' href="#" onclick=`document.getElementById(${x}).muted = false;`) UNMUTE
+                br                                
+                input(type="submit" form=`launchForm${file.id}` value="REPLACE")
+                br
+                br      
+                
+          - let uploadSrc = `https://fk-audio.s3.amazonaws.com/${lastUpload.Name}`
+          br
+          br
+          br
+          
+          div(class="dotted")
+            p LAST FILE YOU UPLOADED:
+            p= lastUpload.Name
+            audio(controls loop type="audio/mpeg" src=uploadSrc id="toDelete")       
+            br      
+            form(method="POST" action=`/delete/${lastUpload.Name}` id="deleteForm" encType="multipart/form-data")                                        
+            input(type="submit" form="deleteForm" value="UNDO" onclick="setTimeout(function(){var ww = window.open('/uploadForm', '_blank'); ww.close(); }, 1000);")
+      
+      script.
+                    
+        function changeButton(x) {
+          console.log(x)
+          const muteButt = document.getElementById(`mutebutton${x}`)
+          const audioElem = document.getElementById(`audio${x}`)  
+          console.log(audioElem)      
+          if (muteButt.innerHTML == 'TOGGLE TO MUTE') {        
+            muteButt.innerHTML = 'MUTED';      
+            muteButt.style.backgroundColor = '#696969';
+            audioElem.muted = true;
+          } else {
+            muteButt.innerHTML = 'TOGGLE TO MUTE';
+            muteButt.style.backgroundColor = 'darkgray';
+            audioElem.muted = false;
+          }
+        }
+          
+          
+          
+              
+          
