--- a/views/past-composers.pug
+++ b/views/past-composers.pug
@@ -30,54 +30,51 @@ block content
         br
         br
         - let files = fileInfo;                 
-        each file in files ? files : ['NO!!!']                    
-          - let photoSrc = `https://fk-composer-info.s3.amazonaws.com/${file.Name}`                           
-          .profilePhoto
-            //- Profile photo
-            img(src=`${photoSrc}` alt='sample logo')
-          //- Identity details
-          section.profileHeader
-            h3 
-            h1 #{file.Composer}
-            p
-              | #{file.Bio}
-            p            
-            h1 The select element
+        each file in files ? files : ['NO!!!']                                 
+          if (file.id != '0')
+            - let photoSrc = `https://fk-composer-info.s3.amazonaws.com/${file.Name}`                           
+            .profilePhoto
+              //- Profile photo
+              img(src=`${photoSrc}` alt='sample logo')
+            //- Identity details
+            section.profileHeader
+              h3 
+              h1 #{file.Composer}
+              p
+                | #{file.Bio}
+              p            
+              br
+              p Select a past snapshot:                      
+                //- - let sliceCount = parseInt(file.EndSlice) - parseInt(file.StartSlice) + 1
+                - let sliceStart = parseInt(file.StartSlice)
+                - let sliceEnd = parseInt(file.EndSlice)
+                - let sliceArr = []                
+                - for (let i=sliceStart; i<=sliceEnd; i++) {sliceArr.push(i);}
+                
+                //- form(action=`/history/${val}` method="post")                                      
+                //- //-   select(name=val id=val)           
+                //- //-   each val in sliceArr                                                              
+                //- //-     option(value=val) #{val}                                            
 
-            p select element is used to create a drop-down list.            
-        
-              //- - let sliceCount = parseInt(file.EndSlice) - parseInt(file.StartSlice) + 1
-              - let sliceStart = parseInt(file.StartSlice)
-              - let sliceEnd = parseInt(file.EndSlice)
-              - let sliceArr = []                
-              - for (let i=sliceStart; i<=sliceEnd; i++) {sliceArr.push(i);}
-             
-              each val in sliceArr                 
-                form(action=`/history/${val}` method="post")
-                  span
-                  label(for=`history/${val}`)
-                  //- select(name=val id=val)                                                                              
-                  //-   option(value=val)=val                                            
-                  input(type='submit', value=val)
-                
-                
-                
-                
-            //-     form(method="GET" action=`/history/${file.StartSlice}` id=`launchForm${val}`)
-            //-       label(for="cars")
-            //-       select(name="cars" id="cars")               
-            //-         option(value=`${val}`) #{val}  
-            //-     input(type="submit" form=`launchform${val}`)                              
-            //-   br
-            //-   br
-            //-   input(type="submit" value="Submit" form=`launchform${x}`)
-            //- form
+                form(id=`historyForm${file.id}` method="post")                                     
+                select(id=`selectBox${file.id}` onchange=`submitForm(${file.id})`)
+                  each val in sliceArr
+                    option(id="snapOp" value=val)= val                
 
-            p Click the "Submit" button and the form-data will be sent to a page on the called "action_page.php".
+  script.
             
-            
-                          
-                
+    function submitForm(form) {      
+      const snapValue = document.getElementById(`selectBox${form}`).value   
+      const snapForm = document.getElementById(`historyForm${form}`);                   
+      snapForm.action = `/history/${snapValue}`
+      snapForm.submit();
 
+    }
+                        
+          
+          
+                        
+              
+
+              
                 
-                  
